--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -13554,3 +13554,21 @@ input:focus {
   .officVisit.display-cls{
       display: flex;
   }
+
+  .darkTheme > div:nth-child(3){
+      background-color: #404646!important;
+  }
+
+  .darkTheme label, .darkTheme  span, .darkTheme  p{
+      color: #D9DADA !important;
+  }
+
+  .dark-confirm{
+    background-color: #404646!important;
+  }
+
+  .dark-confirm h1, .dark-confirm  span, .dark-confirm  p{
+    color: #D9DADA !important;
+}
+
+  
