--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -1941,7 +1941,8 @@ a.profilMenu {
     .infoBoxCntnt, .dataBoxCntnt, .prespBoxCntnt, .presBoxCntnt, 
     .paraBoxCntnt, .fancyBoxCntnt, .fancyBoxCncl, .qrBoxCntnt, .trstBoxCntnt,
     .invtBoxCntnt, .apontBoxCntnt, .apontBoxCntnt, .keyBoxCntnt, .dashBoxCntnt,
-    .fltrModelCntnt, .slotBoxMain, .nwEntrCntnt, .nwEntrMsg {
+    .fltrModelCntnt, .slotBoxMain, .nwEntrCntnt, .nwEntrMsg, .phrmBoxCntnt,
+    .editBoxCntnt {
         width: 96% !important;
     }
     .apointUpcom {
@@ -1966,6 +1967,20 @@ a.profilMenu {
     .lessonTitle {
         margin-left: 0px !important;
         padding: 0px 12px;
+    }
+    .organDeclare h5 {
+        line-height: 18px !important;
+    }
+    .organDeclare label span {
+        line-height: 18px !important;
+        margin-bottom: 6px;
+    }
+    .organDecide label span {
+        line-height: 18px !important;
+    }
+    .scndOptionIner ul {
+        padding: 12px 8px !important;
+        min-width: 182px !important;
     }
 }
 @media (max-width: 992px){ 
@@ -4237,7 +4252,7 @@ button.aboutTabsIner {
     font-size: 20px;
     font-weight: bold;
     letter-spacing: 0;
-    line-height: 32px;
+    line-height: 26px;
 }
 .secureChain p {
     color: #7F8383;
@@ -4269,7 +4284,7 @@ button.aboutTabsIner {
     font-size: 14px;
     font-weight: 600;
     letter-spacing: 0;
-    line-height: 14px;
+    line-height: 16px;
     margin-right: 0px;
 }
 .organDeclare {
@@ -9372,6 +9387,7 @@ a.menuActv img {
 }
 .dataBoxUpr {
     padding: 15px 24px 24px 24px;
+    margin-right: 2px;
 }
 .dataBoxInput label {
     color: #404646;
@@ -12898,10 +12914,22 @@ a.academy_ul ul li img {
 
 
 /*Added By ankita*/
+.darkTheme .painIntencty input[type=range] {
+    background: #404646!important;
+}
+.darkTheme .condIntencty input[type=range] {
+    background: #404646!important;
+}
 .darkTheme .trigerAction{
     background-color: #705a29 !important;
 }
-.darkTheme h3,.darkTheme h4,  .css-1uccc91-singleValue  {
+.darkTheme .delQuesBook a {
+    color:#fff!important;
+}
+.darkTheme .react-calendar {
+    background: none !important;
+}
+.darkTheme h3,.darkTheme h4,  .css-1uccc91-singleValue, .darkTheme .srvcTagsLoc a {
     color: #BFC1C1 !important;
 }
 .darkTheme .trigerAction ul li {
@@ -13600,11 +13628,11 @@ input:focus {
       display: flex;
   }
 
-  .darkTheme > div:nth-child(3),.homeBgDrk .tooltip-container{
+  .darkTheme > div:nth-child(3){
       background-color: #404646!important;
   }
 
-  .darkTheme label, .darkTheme  span, .darkTheme  p, .darkTheme  h3, .darkTheme  h1{
+  .darkTheme label, .darkTheme  span, .darkTheme  p{
       color: #D9DADA !important;
   }
 
@@ -13612,10 +13640,9 @@ input:focus {
     background-color: #404646!important;
   }
 
-  .dark-confirm h1, .dark-confirm  span, .dark-confirm  p,  .dark-confirm  h3{
+  .dark-confirm h1, .dark-confirm  span, .dark-confirm  p{
     color: #D9DADA !important;
 }
-
 .homeBgDrk .rbc-date-cell,.homeBgDrk .calendar-cont,.homeBgDrk .calendar-date {
     color: #9b9b9b!important;
 }
@@ -13669,4 +13696,9 @@ input:focus {
 
 .homeBgDrk .ql-editor {
     color: #c0c0c0;
+}
+@media (max-width: 599px){
+.LanguageBoxMain {
+    width: 94% !important;
+  }
 }
