--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -13000,6 +13000,23 @@ a.academy_ul ul li img {
 
 
 /*Added By ankita*/
+.homeBgDrk .ThemeModeSet1 {
+    color : #fff!important;
+}
+.ThemeModeSet1{
+    vertical-align: top;
+    font-weight: 700;
+}
+.chat-ppl-listitem-msg-cnt{
+    top: 5px !important;
+    background-color : red !important;
+}
+.contact-listitem .contact-listitem-dtls{
+    position : relative !important;
+}
+.allTimeSelnw.comonSelnw div:last-child {
+    z-index: 99999999999!important;
+}
 .rlativeDiv .passInst {
     position: relative!important;
     top: 11px !important;
