--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -13000,6 +13000,16 @@ a.academy_ul ul li img {
 
 
 /*Added By ankita*/
+button.CutomStripeButton{
+    opacity: 0 !important;
+}
+.homeBgDrk .NotFoundContent {
+    color: #BFC1C1 !important;
+    background-color: #404646 !important;
+}
+.homeBgDrk .NotFound h1 {
+    color: #fff !important;
+}
 .homeBgDrk .ThemeModeSet1 {
     color : #fff!important;
 }
