--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -13000,6 +13000,15 @@ a.academy_ul ul li img {
 
 
 /*Added By ankita*/
+.searchbyText{
+    width: 99%;
+    padding: 5px;
+    border: none;
+    border-radius: 5px;
+}
+.drVisit, .comeAppoint, .lstDocs, .persBlodMesur{
+    margin-bottom: 32px;
+}
 .SetWidthPopup{
     width: 600px !important;
 }
